@@ -198,6 +198,9 @@ LDAPinit_constants( PyObject* d )
 #ifdef LDAP_OPT_X_SASL_USERNAME
 	add_int(d,OPT_X_SASL_USERNAME);
 #endif
+#ifdef LDAP_OPT_CONNECT_ASYNC
+	add_int(d,OPT_CONNECT_ASYNC);
+#endif
 
 	add_int(d,DN_FORMAT_LDAP);
 	add_int(d,DN_FORMAT_LDAPV3);
